fix(pages): localize hardcoded strings in BreadcrumbsField component
- Add 'showBreadcrumbs' translation key to English and German translations
- Update translation schema with new key
- Replace hardcoded tooltip "Show Breadcrumbs" with translated value
- Replace hardcoded drawer title "Breadcrumbs" with translated value
- Import and use usePluginTranslation hook in BreadcrumbsField component

This change enables proper internationalization for German users who will now see "Navigationspfade anzeigen" instead of English text.

Resolves jhb-dev/jay-jens-payload#37

--- a/pages/src/translations/translation-schema.json
+++ b/pages/src/translations/translation-schema.json
@@ -40,6 +40,9 @@
           "breadcrumb": {
             "type": "string"
           },
+          "showBreadcrumbs": {
+            "type": "string"
+          },
           "syncSlugWithX": {
             "type": "string"
           },
@@ -58,6 +61,7 @@
           "alternatePath",
           "breadcrumbs",
           "breadcrumb",
+          "showBreadcrumbs",
           "syncSlugWithX",
           "slugWasChangedFromXToY"
         ]
