feat(pages): add translations for automatic redirect creation
- Add English translations for redirect creation UI
- Add German translations for redirect creation UI
- Update translation schema with new keys
- Update slug change warning message format

--- a/pages/src/translations/translation-schema.json
+++ b/pages/src/translations/translation-schema.json
@@ -48,6 +48,24 @@
           },
           "slugWasChangedFromXToY": {
             "type": "string"
+          },
+          "createRedirect": {
+            "type": "string"
+          },
+          "creatingRedirect": {
+            "type": "string"
+          },
+          "redirectCreatedSuccessfully": {
+            "type": "string"
+          },
+          "redirectCreationFailed": {
+            "type": "string"
+          },
+          "redirectReasonSlugChange": {
+            "type": "string"
+          },
+          "creating": {
+            "type": "string"
           }
         },
         "required": [
@@ -63,7 +81,13 @@
           "breadcrumb",
           "showBreadcrumbs",
           "syncSlugWithX",
-          "slugWasChangedFromXToY"
+          "slugWasChangedFromXToY",
+          "createRedirect",
+          "creatingRedirect",
+          "redirectCreatedSuccessfully",
+          "redirectCreationFailed",
+          "redirectReasonSlugChange",
+          "creating"
         ]
       }
     },
